Use Unsafe memory buffer instead of byte buffer - https://github.com/imprint-serde/imprint-java/issues/21 (#24)